# quant

./: .env.example  .gitignore  ARCHITECTURE.md  LIMITATIONS.md  ONBOARDING.md  README.md  pyproject.toml
markets/: _synthetic.yaml  betfair-brazil-serieb.yaml  betfair-corners-cards.yaml  betfair-eng-l1l2.yaml  betfair-eng-l1l2.yaml.bak  betfair-itf-challenger.yaml  betfair-jleague.yaml  betfair-nrl.yaml  betfair-tt-csl.yaml  betfair-wsl-nwsl.yaml  drift-solana.yaml  earnings-beatmiss-A.yaml  earnings-beatmiss-B.yaml  earnings-flagship-A.yaml  earnings-flagship-B-117M.yaml  earnings-flagship-B-11M.yaml  earnings-flagship-B-203M.yaml  earnings-flagship-B-33M.yaml  earnings-flagship-B-4M.yaml  earnings-flagship-B.yaml  hyperliquid-midcap.yaml  kalshi-cpi.yaml  kalshi-fda.yaml  kalshi-nfp.yaml  kalshi-weather.yaml  oil-prices.yaml  polymarket-elections.yaml  polymarket-emmys.yaml  polymarket-entertainment-A.yaml  polymarket-entertainment-B.yaml  polymarket-oscars.yaml
research/: 00-context.md  01-market-universe.md  02-pipeline-design.md  03-backtest-hygiene.md  04-screening-method.md  05-phase1-result.md  06-h200-gate.md  07-h200-window-result.md  08-architecture-vision.md  09-agent-swarm-implementation.md  10-stage-a5-feature-extraction.md  11-temporal-mismatch-and-voyage.md  12-session-lessons-2026-05-15.md  13-broader-entertainment-poc.md  14-dual-poc-result.md  15-earnings-at-scale-plan.md  16-flagship-sweep-results.md  INDEX.md  linkedin-flagship-draft.md
runs/: LEADERBOARD.md  LEADERBOARD_FOOTER.md  sweep_summary.csv.failed.20260516  (+3 more)
scripts/: 00_bootstrap.py  (+12 more)
(+11424 files in other folders)
